<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="LiteraryBrown_name">Ochikuri</string>
    <string name="LiteraryCyan_name">Sabiseiji</string>
    <string name="LiteraryGreen_name">Yanagisusutake Cya</string>
    <string name="LiteraryPink_name">Sekichiku</string>
    <string name="LiteraryPurple_name">Hatoba Murasaki</string>
    <string name="LiteraryRed_name">Suoh</string>
    <string name="LiteraryWhite_name">Ensyu Nezumi</string>
    <string name="LiteraryYellow_name">Karekusak</string>
    <string name="about_item_text">About</string>
    <string name="about_ui_share">Share</string>
    <string name="activity_not_found">App Not Installed</string>
    <string name="activity_title_back">Back</string>
    <string name="activity_title_confirm">Confirm</string>
    <string name="app_name">SmartisanOS</string>
    <string name="app_name_app_store">Market</string>
    <string name="app_name_bbs">BBS</string>
    <string name="app_name_calendar">Calendar</string>
    <string name="app_name_game_center">Game Center</string>
    <string name="app_name_mms">Messages</string>
    <string name="app_name_notes">NOTE</string>
    <string name="app_name_phone">Phone</string>
    <string name="app_name_quicksearchbox">Search</string>
    <string name="app_name_reader">Reader</string>
    <string name="app_name_smile_cloud">Smiling Cloud</string>
    <string name="app_name_weather">Weather</string>
    <string name="at_most">Select No More Than %1$s Apps</string>
    <string name="atleast_one_visible">At least one desktop should remain visible</string>
    <string name="can_not_download_theme_by_net">Download failed, Please connect to the network environment</string>
    <string name="cancel">Cancel</string>
    <string name="category_language">en</string>
    <string name="category_other">Miscellaneous</string>
    <string name="confirm_download_app_msg">Do you want to download Smartisan APP \"%s\" ?</string>
    <string name="confirm_sort_by_category_dialog_title_1">Preview: Sort by App Type</string>
    <string name="confirm_sort_by_color_dialog_title">Sort by Color</string>
    <string name="confirm_sort_by_color_dialog_title_1">Preview: Sort by Color</string>
    <string name="confirm_sort_by_install_dialog_title">Sort by Time</string>
    <string name="confirm_sort_by_install_dialog_title_1">Preview: Sort by Time Installed</string>
    <string name="confirm_sort_by_usage_dialog_title">Sort by Frequency</string>
    <string name="confirm_sort_by_usage_dialog_title_1">Preview: Sort by Frequency</string>
    <string name="current_theme_tag">Current</string>
    <string name="current_use">Current</string>
    <string name="default_icon_text">Default Icons</string>
    <string name="delete_area_text">Uninstallation</string>
    <string name="dlg_cancel">Cancel</string>
    <string name="dlg_msg_download_theme_local_only">Currently there are only 1 theme, whether to download other themes?</string>
    <string name="dlg_ok">OK</string>
    <string name="dlg_switch_launcher_msg">The Home Screen will need to reload after the change.</string>
    <string name="dlg_switch_launcher_msg_9_grids">When you change the Home Screen from 16 grids to 9 grids, all pages with more than 9 icons (including the hidden page) will be automatically sorted into 2 pages. The Home Screen will need to reload after the change.</string>
    <string name="dlg_switch_launcher_title">Setting Home Screen</string>
    <string name="download_embedded_app_downlading">%s Downloading</string>
    <string name="download_embedded_app_failed">Download %s Failed</string>
    <string name="download_with_cellular_continue">Continue</string>
    <string name="empty_password">Empty Password</string>
    <string name="enable_cellular_label">Enable Cellular</string>
    <string name="enable_cellular_tips">When Wi-Fi is unavailable, you need a mobile data connection to download Launcher themes or change icons and preset apps.</string>
    <string name="engine_title_baidu">Baidu</string>
    <string name="engine_title_bing">Bing</string>
    <string name="engine_title_google">Google</string>
    <string name="engine_title_sm">Shenma</string>
    <string name="enter_page_title">Enter Title</string>
    <string name="enter_password">Enter password to access protected apps</string>
    <string name="eyelock_notice">Hidden</string>
    <string name="flip_anim_cut_card">Screen Slide</string>
    <string name="flip_anim_default">Default</string>
    <string name="flip_anim_gather">Aggregation</string>
    <string name="flip_anim_grid_flip">Block Flip</string>
    <string name="flip_anim_lattice_flip">Grid Flip</string>
    <string name="flip_anim_lattice_stretch">Grid Stretch</string>
    <string name="flip_anim_shutter">Window Shades</string>
    <string name="flip_anim_subtitle">Pick an animation</string>
    <string name="flip_anim_title">Page Animations</string>
    <string name="follow_dialog_coyp_text">Copy</string>
    <string name="follow_dialog_coyp_toast_text">Text Copied</string>
    <string name="follow_dialog_weibo_title_text">Copy the Weibo account name</string>
    <string name="follow_dialog_weixin_title_text">Copy the Wechat account name</string>
    <string name="follow_website_title">Official Website</string>
    <string name="follow_weibo_content">锤子科技</string>
    <string name="follow_weibo_title">Weibo</string>
    <string name="follow_weixin_title">编译作者</string>
    <string name="forget_password">Forget</string>
    <string name="global_search">System-wide Search</string>
    <string name="has_selected_1_app_float">%1$s App Selected</string>
    <string name="has_selected_app_float">%1$s Apps Selected</string>
    <string name="hdd_dialog_body">Sorry, Smartisan Launcher currently supports only part of the resolution of 720P and more than 1GB memory phones,in order to ensure the smooth running effects and a good user experience of it.</string>
    <string name="hdd_dialog_title">Warning</string>
    <string name="hdd_dialog_uninstall_btn">OK</string>
    <string name="icon_setting_empty_tip">No Replaceable Icons</string>
    <string name="icon_setting_sub_text">"Choose well-designed icons to replace apps' default icons"</string>
    <string name="icon_setting_text">Application Icons</string>
    <string name="privacy_password_title">Privacy Password</string>
    <string name="privacy_password_sub_text">Set or change the page lock password</string>
    <string name="profile_apps_title">Cloned Apps</string>
    <string name="profile_apps_subtitle">Cloned apps are hidden until you enable them here</string>
    <string name="improved_icon_text">Improved Icons</string>
    <string name="incorrect_password">Incorrect Password</string>
    <string name="initializing">Initializing</string>
    <string name="insufficient_space">Insufficient Space</string>
    <string name="launcher_check_update_message">A newer version of the Smartisan Launcher (version V%s) has been detected.</string>
    <string name="launcher_fast_launch_tips_36">Start an application by tapping the icon under multiple screen view.</string>
    <string name="launcher_fast_launch_tips_64">Start an application by tapping the icon under multiple screen view.</string>
    <string name="launcher_fast_launch_tips_81">Start an application by tapping the icon under multiple screen view.</string>
    <string name="launcher_flip_animation">Launcher Flip Animation</string>
    <string name="launcher_mode_summary">Home Screen</string>
    <string name="launcher_multi_block_mode_summary">Multiple Screen View</string>
    <string name="obsession_badge_swipe_clean">Swipe to Clean Icon Badges</string>
    <string name="obsession_header_title">OCD Settings</string>
    <string name="obsession_hide_badge">Badge Reminders</string>
    <string name="obsession_hide_lable">Hide Icon Labels</string>
    <string name="hide_navigation_bar_label">Hide Navigation Bar On Home Screen</string>
    <string name="search_page_enabled_title">Swipe Up to Open Search</string>
    <string name="quick_search_install_title">Built-in Search</string>
    <string name="quick_search_install_subtitle">Original Smartisan phone search app</string>
    <string name="quick_search_install_button">Install</string>
    <string name="setting_default_search_engine_tips">Swipe up on the desktop to quickly search apps.</string>
    <string name="title_installed_themes">Local Themes</string>
    <string name="title_uninstalled_themes">Online Themes</string>
    <string name="wall_paper_header_title">Themes, Wallpapers, Icons</string>
    <string name="unlock_animation_title">Unlock Animation</string>
    <string name="unlock_animation_tips">Play scale animation after unlock</string>
    <string name="dynamic_weather_title">Dynamic weather</string>
    <string name="dynamic_weather_auto_location">Automatic location</string>
    <string name="dynamic_weather_manual_city">Choose city manually</string>
    <string name="dynamic_weather_manual_city_subtitle">Search for a fixed weather location</string>
    <string name="dynamic_weather_refresh">Refresh now</string>
    <string name="dynamic_weather_tips">Chinese cities use the bundled city index and China Weather first; MET Norway and Open-Meteo provide fallback coverage. Automatic mode uses only coarse system location. Weather is normally checked hourly.</string>
    <string name="desktop_backup_title">Backup &amp; restore</string>
    <string name="backup_location">Backup location</string>
    <string name="backup_now">Back up now</string>
    <string name="restore_from_backup">Restore from backup</string>
    <string name="undo_last_restore">Undo last restore</string>
    <string name="desktop_backup_tips">Included: 12/20-cell choice, Home pages and order, folders, app and shortcut positions, Home settings, selected theme, app names, custom icons, and icon redirects. Not included: wallpaper, APKs or app data, signed-in accounts, system permissions, default Home status, privacy password, weather cache, or location data. Restore does not install missing apps or change the current wallpaper. Backup files may contain app names; keep them safe.</string>
    <string name="usage_tips_title">Tips</string>
    <string name="usage_tips_dynamic_weather_calendar_group">Dynamic weather and calendar</string>
    <string name="usage_tips_ocd_group">OCD options</string>
    <string name="usage_tips_shortcuts_group">Mini programs and shortcuts</string>
</resources>