<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/background" android:fitsSystemWindows="true" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:setting="http://schemas.android.com/apk/res-auto">
    <com.smartisanos.home.widget.sys.Title android:id="@id/view_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:overScrollMode="always" setting:title_titlex="@string/obsession_header_title" />
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent" android:layout_below="@id/view_title" android:layout_alignParentBottom="true" android:overScrollMode="always">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
            <com.smartisanos.home.settings.SettingItemSwitch android:id="@id/item_id_hide_lable" android:layout_marginTop="@dimen/settings_item_top_bottom_margin" setting:setting_item_switch_title="@string/obsession_hide_lable" style="@style/SettingSubItemSingleStyle" />
            <com.smartisanos.home.settings.SettingItemSwitch android:id="@id/item_id_hide_navigation_bar" android:layout_marginTop="@dimen/settings_item_top_bottom_margin" setting:setting_item_switch_title="@string/hide_navigation_bar_label" style="@style/SettingSubItemSingleStyle" />
            <com.smartisanos.home.settings.SettingItemSwitch android:id="@id/item_id_hide_badge" android:layout_marginTop="@dimen/settings_item_top_bottom_margin" setting:setting_item_switch_title="@string/obsession_hide_badge" style="@style/SettingSubItemSingleStyle" />
            <com.smartisanos.home.settings.SettingItemSwitch android:id="@id/item_id_badge_swipe_clean" android:layout_marginTop="@dimen/settings_item_top_bottom_margin" setting:setting_item_switch_title="@string/obsession_badge_swipe_clean" style="@style/SettingSubItemSingleStyle" />
            <com.smartisanos.home.settings.SettingItemSwitch android:id="@id/item_id_unlock_anim" android:layout_marginTop="@dimen/settings_item_top_bottom_margin" setting:setting_item_switch_title="@string/unlock_animation_title" style="@style/SettingSubItemSingleStyle" />
            <com.smartisanos.home.widget.sys.TipsView android:layout_marginTop="@dimen/settings_item_title_margin_top" android:text="@string/unlock_animation_tips" style="@style/SettingItemTipsStyle" />
            <com.smartisanos.home.settings.SettingItemSwitch android:id="@+id/item_id_search_page_enabled" android:layout_marginTop="@dimen/settings_item_top_bottom_margin" setting:setting_item_switch_title="@string/search_page_enabled_title" style="@style/SettingSubItemTopStyle" />
            <RelativeLayout android:id="@+id/item_id_quick_search_install" android:background="@drawable/selector_setting_sub_item_bg_bottom" android:clickable="true" android:layout_width="match_parent" android:layout_height="82.0dp">
                <ImageView android:id="@+id/quick_search_install_icon" android:layout_width="46.0dp" android:layout_height="46.0dp" android:layout_marginLeft="@dimen/setting_item_text_left" android:src="@drawable/app_icon_search" android:scaleType="fitCenter" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
                <LinearLayout android:orientation="vertical" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginLeft="18.0dp" android:layout_marginRight="12.0dp" android:layout_toRightOf="@id/quick_search_install_icon" android:layout_toLeftOf="@id/quick_search_install_button">
                    <TextView android:textSize="@dimen/setting_item_text_size" android:textColor="@drawable/more_item_color_bg" android:id="@+id/quick_search_install_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/quick_search_install_title" android:singleLine="true" android:ellipsize="end" />
                    <TextView android:textSize="13.0sp" android:textColor="#8f9096" android:id="@+id/quick_search_install_subtitle" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="3.0dp" android:text="@string/quick_search_install_subtitle" android:singleLine="true" android:ellipsize="end" />
                </LinearLayout>
                <TextView android:textSize="18.0sp" android:textColor="#ff565861" android:gravity="center" android:id="@+id/quick_search_install_button" android:background="@drawable/app_operation_button" android:minWidth="96.0dp" android:layout_width="wrap_content" android:layout_height="52.0dp" android:layout_marginRight="18.0dp" android:paddingLeft="24.0dp" android:paddingRight="24.0dp" android:text="@string/quick_search_install_button" android:singleLine="true" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            </RelativeLayout>
            <com.smartisanos.home.widget.sys.TipsView android:layout_marginTop="@dimen/settings_item_title_margin_top" android:text="@string/setting_default_search_engine_tips" style="@style/SettingItemTipsStyle" />
            <include layout="@layout/item_bottom_shadow_layout" />
        </LinearLayout>
    </ScrollView>
    <include android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@id/view_title" layout="@layout/title_bar_shadow" />
</RelativeLayout>
